Put more spacing around content and fix profile card height

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 .profile-card {
-    height: 155px;
+    height: 175px;
 }
 
 .list-inline {
